lib/queue-msg-macro/tests/unnamed-struct-no-type.stderr
error: Only support one parameter
 --> tests/unnamed-struct-no-type.rs:4:15
  |
4 | struct Unnamed();
  |               ^^
