lib/queue-msg-macro/tests/unnamed-struct-no-type.rs
use queue_msg_macro::msg_struct;

#[msg_struct]
struct Unnamed();

fn main() {}
